add field collecting
