# docs/swagger.json
@@ -740,6 +740,10 @@
                 "timestamp": {
                     "description": "Day(unix) we checked the status of the data",
                     "type": "integer"
+                },
+                "coletando": {
+                    "description": "If there is data from that agency",
+                    "type": "boolean"
                 }
             }
         },
@@ -1018,6 +1022,10 @@
                 "timestamp": {
                     "description": "Day(unix) we checked the status of the data",
                     "type": "integer"
+                },
+                "coletando": {
+                    "description": "If there is data from that agency",
+                    "type": "boolean"
                 }
             }
         },
